--- a/src/main/resources/templates/myPage/preference.html
+++ b/src/main/resources/templates/myPage/preference.html
@@ -41,86 +41,94 @@
 
 
       <section class="content-box">
+        <div class="row">
+          <!-- 카테고리 선택 영역 -->
+          <div class="col-md-6">
+            <div class="category-container container mt-3 mb-3 pb-3 pt-3 bg-light rounded shadow">
+              <div class="row mb-3">
+                <div class="col-12">
+                  <div class="card sticky-card">
+                    <div class="card-header">
+                      <h5>내 카테고리</h5>
+                      <div class="d-flex flex-wrap gap-2 col-12">
+                        <button id="saveCategory" class="btn btn-primary mt-3">저장하기</button>
+                        <button id="loadCategory" class="btn btn-secondary mt-3">불러오기</button>
+                        <button id="plusCategory" class="btn btn-success mt-3">전부 담기</button>
+                        <button id="minusCategory" class="btn btn-danger mt-3">전부 빼기</button>
+                      </div>
+                    </div>
+                    <div class="card-body gap-1 py-5">
+                      <p class="card-text">관심 있는 카테고리를 선택하세요.</p>
+                    </div>
 
-        <div class="category-container container mt-3 mb-3 pb-3 pt-3 bg-light rounded shadow">
-          <div class="row mb-3">
-            <div class="col-12">
-              <div class="card sticky-card max-width">
-                <div class="card-header">
-                  <h5>내 카테고리</h5>
-                  <div class="d-flex flex-wrap gap-2 col-12">
-                    <button id="saveCategory" class="btn btn-primary mt-3">저장하기</button>
-                    <button id="loadCategory" class="btn btn-secondary mt-3">불러오기</button>
-                    <button id="plusCategory" class="btn btn-success mt-3">전부 담기</button>
-                    <button id="minusCategory" class="btn btn-danger mt-3">전부 빼기</button>
-                  </div>
-                </div>
-                <div class="card-body gap-1 py-5">
-                  <p class="card-text" >관심 있는 카테고리를 선택하세요.</p>
-                </div>
+                    <div class="row">
+                      <div class="col-12">
+                        <div class="card">
 
-                <div class="row">
-                  <div class="col-12">
-                    <div class="card">
-      
-                      <div class="card-body py-1 d-flex flex-wrap justify-content-center">
-                        <!-- 카테고리 버튼들 -->
-                        <button class="btn btn-light preference" th:each="category : ${categoryList}" style="border: 1px solid #333;">
-                          <label class="checkbox-label d-flex align-items-center">
-                            <input type="checkbox" name="categoryNo" class="category-checkbox"
-                              th:value="${category.categoryNo}" style="display: none;">
-                            <span class="checkbox-text" th:text="${category.categoryName}"></span>
-                          </label>
-                        </button>
+                          <div class="card-body py-1 d-flex flex-wrap justify-content-center">
+                            <!-- 카테고리 버튼들 -->
+                            <button class="btn btn-light preference" th:each="category : ${categoryList}"
+                              style="border: 1px solid #333;">
+                              <label class="checkbox-label d-flex align-items-center">
+                                <input type="checkbox" name="categoryNo" class="category-checkbox"
+                                  th:value="${category.categoryNo}" style="display: none;">
+                                <span class="checkbox-text" th:text="${category.categoryName}"></span>
+                              </label>
+                            </button>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-
-              </div>
             </div>
           </div>
 
-        <!-- 취향 선택 영역 -->
-        <div class="preference-container container mt-3 mb-3 pb-3 pt-3 bg-light rounded shadow">
-          <div class="row mb-3">
-            <div class="col-12">
-              <div class="card sticky-card">
-                <div class="card-header">
-                  <h5>내 취향</h5>
-                  <div class="d-flex flex-wrap gap-2 col-12">
-                    <button id="savePreference" class="btn btn-primary mt-3">저장하기</button>
-                    <button id="loadPreference" class="btn btn-secondary mt-3">불러오기</button>
-                    <button id="plusPreference" class="btn btn-success mt-3">전부 담기</button>
-                    <button id="minusPreference" class="btn btn-danger mt-3">전부 빼기</button>
-                  </div>
-                </div>
-                <div class="card-body gap-2 py-5">
-                  <p class="card-text">관심 있는 테마를 선택하세요.</p>
-                </div>
-                <div class="row">
-                  <div class="col-12">
-                    <div class="card">
-      
-                      <div class="card-body py-1 d-flex flex-wrap justify-content-center">
-                        <!-- 취향 버튼들 -->
-                        <button class="btn btn-light preference" th:each="preference : ${preferenceList}"  style="border: 1px solid #333;">
-                          <label class="checkbox-label d-flex align-items-center">
-                            <input type="checkbox" name="preferenceNo" class="preference-checkbox"
-                              th:value="${preference.preferenceNo}" style="display: none;">
-                            <span class="checkbox-text" th:text="${preference.preferenceName}"></span>
-                          </label>
-                        </button>
+          <!-- 취향 선택 영역 -->
+          <div class="col-md-6">
+            <div class="preference-container container mt-3 mb-3 pb-3 pt-3 bg-light rounded shadow">
+              <div class="row mb-3">
+                <div class="col-12">
+                  <div class="card sticky-card">
+                    <div class="card-header">
+                      <h5>내 취향</h5>
+                      <div class="d-flex flex-wrap gap-2 col-12">
+                        <button id="savePreference" class="btn btn-primary mt-3">저장하기</button>
+                        <button id="loadPreference" class="btn btn-secondary mt-3">불러오기</button>
+                        <button id="plusPreference" class="btn btn-success mt-3">전부 담기</button>
+                        <button id="minusPreference" class="btn btn-danger mt-3">전부 빼기</button>
+                      </div>
+                    </div>
+                    <div class="card-body gap-2 py-5">
+                      <p class="card-text">관심 있는 테마를 선택하세요.</p>
+                    </div>
+                    <div class="row">
+                      <div class="col-12">
+                        <div class="card">
+
+                          <div class="card-body py-1 d-flex flex-wrap justify-content-center">
+                            <!-- 취향 버튼들 -->
+                            <button class="btn btn-light preference" th:each="preference : ${preferenceList}"
+                              style="border: 1px solid #333;">
+                              <label class="checkbox-label d-flex align-items-center">
+                                <input type="checkbox" name="preferenceNo" class="preference-checkbox"
+                                  th:value="${preference.preferenceNo}" style="display: none;">
+                                <span class="checkbox-text" th:text="${preference.preferenceName}"></span>
+                              </label>
+                            </button>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              </div>
             </div>
           </div>
-      </section>
+        </div>
+    </div>
+    </section>
     </div>
   </main>
   <footer th:replace="~{common/footer :: footer}"></footer>
