--- a/src/main/resources/templates/member/signUp.html
+++ b/src/main/resources/templates/member/signUp.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>팬텀북스 : 회원가입</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  
+
   <link rel="stylesheet" href="/css/member/signUp.css">
   <script src="https://kit.fontawesome.com/890489b5e8.js" crossorigin="anonymous"></script>
 </head>
@@ -23,7 +23,7 @@
   <form action="signUp" method="POST" name="signUpForm" id="signUpForm" class="needs-validation mx-auto mt-4"
     style="width: 35%;" novalidate>
 
-    
+
     <!-- 아이디 입력, 요청사항, 중복검사 버튼 -->
     <div class="essentialInput">
       <div class="required-note text-start mx-auto" style=" color: rgb(241, 103, 103); font-weight: bold; left:100px;">
@@ -35,12 +35,12 @@
             autocomplete="off" required>
           <label for="memberId">아이디</label>
           <button type="button" id="idClearBtn" class="btn-close clear-btn" onclick="clearInput('memberId')"
-            aria-label="Clear" tabindex="-1"></button>
+            aria-label="Clear" tabindex="-1" style="display: none;"></button>
           <div class="invalid-feedback">아이디를 입력해주세요.</div>
         </div>
-        <div class="col-auto">
-          <span id="idHelpLength" class="form-text">&nbsp;&nbsp;6~12자 사이로</span> <br>
-          <span id="idHelpAlphaNumeric" class="form-text">&nbsp;&nbsp;영어와 숫자만 사용</span>
+        <div class="col-3">
+          <span id="idHelpLength" class="form-text" style="font-size: 0.7rem;">&nbsp;&nbsp;6~12자 사이로</span> <br>
+          <span id="idHelpAlphaNumeric" class="form-text" style="font-size: 0.7rem;">&nbsp;&nbsp;영어와 숫자만 사용</span>
         </div>
         <div class="col-auto">
           <button type="button" id="idCheckBtn" class="btn btn-primary" style="display: none;">ID 중복확인</button>
@@ -56,15 +56,16 @@
             autocomplete="off" required>
           <label for="memberPw">비밀번호</label>
           <button type="button" id="passwordClearBtn" class="btn-close clear-btn" onclick="clearInput('memberPw')"
-            aria-label="Clear" tabindex="-1"></button>
+            aria-label="Clear" tabindex="-1" style="display: none;"></button>
           <div class="invalid-feedback">비밀번호를 입력해주세요.</div>
         </div>
-        <div class="col-auto">
-          <span id="passwordHelpLength" class="form-text">&nbsp;&nbsp;8~12자 사이로</span> <br>
-          <span id="passwordHelpChars" class="form-text">&nbsp;&nbsp;문자, 특수문자, 숫자를 모두 사용</span>
+        <div class="col-3">
+          <span id="passwordHelpLength" class="form-text" style="font-size: 0.7rem;">&nbsp;&nbsp;8~12자 사이로</span> <br>
+          <span id="passwordHelpChars" class="form-text" style="font-size: 0.7rem;">&nbsp;&nbsp;문자, 특수문자, 숫자 모두
+            사용</span>
         </div>
         <div class="col-auto">
-          <button type="button" id="passwordChangeBtn" class="btn btn-danger" style="display: none;">비밀번호 변경</button>
+          <button type="button" id="passwordChangeBtn" class="btn btn-danger" style="display: none;">PW 변경</button>
         </div>
       </div>
 
@@ -75,11 +76,12 @@
             autocomplete="off" required>
           <label for="floatingPasswordConfirm" style="padding-left: -8px;">비밀번호 확인</label>
           <button type="button" class="btn-close clear-btn" onclick="clearInput('floatingPasswordConfirm')"
-            aria-label="Clear" tabindex="-1"></button>
+            aria-label="Clear" tabindex="-1" style="display: none;"></button>
           <div class="invalid-feedback" id="passwordConfirmHelp">비밀번호가 일치하지 않습니다.</div>
         </div>
         <div class="col-auto">
-          <button type="button" id="passwordConfirmBtn" class="btn btn-primary" style="display: none; margin-left:10px">비밀번호
+          <button type="button" id="passwordConfirmBtn" class="btn btn-primary"
+            style="display: none; margin-left:10px">비밀번호
             사용하기</button>
         </div>
       </div>
@@ -92,16 +94,10 @@
             required>
           <label for="name">이름</label>
           <button type="button" class="btn-close clear-btn" onclick="clearInput('name')" aria-label="Clear"
-            tabindex="-1"></button>
+            tabindex="-1" style="display: none;"></button>
           <div class="invalid-feedback">이름을 입력해주세요.</div>
         </div>
-        <div class="form-floating col-6 position-relative">
-          <input type="text" class="form-control" id="birthDate" name="birthDate" placeholder="" maxlength="8" autocomplete="off" required>
-          <label for="birthDate">생일</label>
-          <button type="button" class="btn-close clear-btn" onclick="clearInput('birthDate')" aria-label="Clear"
-          tabindex="-1"></button>
-          <div class="invalid-feedback">공란 or 숫자 8자를 입력해주세요.</div>
-        </div>
+
       </div>
 
       <!-- 전화번호 입력, 인증 문자 발송 버튼 -->
@@ -111,12 +107,14 @@
             autocomplete="off" required>
           <label for="telNo">전화번호 (-없이 숫자만 작성해주세요)</label>
           <button type="button" id="phoneClearBtn" class="btn-close clear-btn" onclick="clearInput('telNo')"
-            aria-label="Clear" tabindex="-1"></button>
+            aria-label="Clear" tabindex="-1" style="display: none;"></button>
           <div class="invalid-feedback">전화번호를 입력해주세요.</div>
         </div>
         <div class="col-auto">
-          <button type="button" id="phoneCheckBtn" class="btn btn-primary" style="display: none; margin-left:10px">전화번호 인증</button>
-          <button type="button" id="phoneChangeBtn" class="btn btn-danger" style="display: none; margin-left:10px">전화번호 변경</button>
+          <button type="button" id="phoneCheckBtn" class="btn btn-primary" style="display: none; margin-left:10px">전화번호
+            인증</button>
+          <button type="button" id="phoneChangeBtn" class="btn btn-danger" style="display: none; margin-left:10px">전화번호
+            변경</button>
         </div>
       </div>
 
@@ -127,20 +125,38 @@
             autocomplete="off" required>
           <label for="floatingPhoneCheck">인증번호 확인</label>
           <button type="button" id="phoneCheckClearBtn" class="btn-close clear-btn"
-            onclick="clearInput('floatingPhoneCheck')" aria-label="Clear" tabindex="-1"></button>
+            onclick="clearInput('floatingPhoneCheck')" aria-label="Clear" tabindex="-1" style="display: none;"></button>
+          <div id="timer" class="timer-text"></div>
         </div>
         <div class="col-auto">
-          <button type="button" id="phoneCertifiedBtn" class="btn btn-primary" style="margin-left:10px;">인증번호 인증</button>
+          <button type="button" id="phoneCertifiedBtn" class="btn btn-primary" style="margin-left:10px;">인증번호
+            인증</button>
         </div>
       </div>
     </div>
     <br>
 
     <!-- 주소 입력란, 주소 찾기 버튼 -->
+
     <div class="selectedInput">
+      <div class="form-floating g-3 mb-2 mt-2 position-relative">
+        <div class="col-12 d-flex align-items-center justify-content-center mb-2"
+          style="font-weight: bold; width: 30%; min-width: 300px; margin-left: 0px; justify-content: left !important;">
+          (선택) 생일
+        </div>
+        <div class="form-floating col-6 position-relative">
+          <input type="text" class="form-control" id="birthDate" name="birthDate" placeholder="" maxlength="8"
+            autocomplete="off" required>
+          <label for="birthDate">생일(YYYYMMDD)</label>
+          <button type="button" class="btn-close clear-btn" onclick="clearInput('birthDate')" aria-label="Clear"
+            tabindex="-1" style="display: none;"></button>
+          <div class="invalid-feedback">공란 or 숫자 8자를 입력해주세요.</div>
+        </div>
+      </div>
+
       <div class="form-floating row g-3 mb-2 mt-2 position-relative">
-        <div class="col-3 d-flex align-items-center justify-content-center" 
-        style="font-weight: bold; width: 30%; min-width: 300px; margin-left: 0px; justify-content: left !important;">
+        <div class="col-3 d-flex align-items-center justify-content-center"
+          style="font-weight: bold; width: 30%; min-width: 300px; margin-left: 0px; justify-content: left !important;">
           (선택) 기본 배송지
         </div>
         <div class="col-auto d-flex align-items-center justify-content-center">
@@ -149,7 +165,7 @@
             style="display: none;">주소 삭제하기</button>
         </div>
       </div>
-  
+
       <!-- 우편번호, 주소, 상세 주소 입력 -->
       <div class="form-floating mb-2 mt-2 position-relative">
         <input type="text" class="form-control" id="zip" name="zip" placeholder="" readonly style="width: 70%;">
@@ -160,11 +176,11 @@
         <label for="address">주소</label>
       </div>
       <div class="form-floating mb-2 mt-2 position-relative">
-        <input type="text" class="form-control" id="detailAddress" name="detailAddress" maxlength="50" autocomplete="off"
-          placeholder="" readonly style="width: 70%;">
+        <input type="text" class="form-control" id="detailAddress" name="detailAddress" maxlength="50"
+          autocomplete="off" placeholder="" readonly style="width: 70%;">
         <label for="detailAddress">상세 주소</label>
-        <button type="button" id="detailAddressClearBtn" class="btn-close clear-btn" onclick="clearInput('detailAddress')"
-          aria-label="Clear"></button>
+        <button type="button" id="detailAddressClearBtn" class="btn-close clear-btn"
+          onclick="clearInput('detailAddress')" aria-label="Clear" tabindex="-1" style="display: none;"></button>
       </div>
     </div>
 
