--- a/src/main/resources/templates/customer/inquiryDetail.html
+++ b/src/main/resources/templates/customer/inquiryDetail.html
@@ -42,11 +42,13 @@
         </div>
 
         <div class="notice-btn-area">
-          <button class="quiry-update" onclick="location.href='/customer/inquiryUpdate/${queryNo}'">수정</button>
-          <button class="quiry-delete" onclick="quiryDelete()">삭제</button>
+          <div class="left-buttons">
+            <button class="quiry-update" onclick="location.href='/customer/inquiryUpdate/${queryNo}'">수정</button>
+            <button class="quiry-delete" onclick="quiryDelete()">삭제</button>
+          </div>
           <a href="/customer/inquiry" id="goToListBtn">목록으로</a>
         </div>
-        
+
 
       </section>
     </div>
