--- a/src/main/resources/static/css/fragments/side-menu.css
+++ b/src/main/resources/static/css/fragments/side-menu.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
-  margin-left: 300px;
+  margin-left: 10%;
   gap: 20px;
   align-self: stretch; 
   border-bottom: none;
